fokklz.surreal-bug-report-parse-error.b9bd9bcc467323528b6447d32c1b2e62f1914809
Running as unit: run-p1989333-i14569441.scope; invocation ID: 4a014ac21ccc407a80a6bb0e05494250
   Compiling proc-macro2 v1.0.81
   Compiling unicode-ident v1.0.12
   Compiling libc v0.2.154
   Compiling autocfg v1.3.0
    Checking cfg-if v1.0.0
   Compiling version_check v0.9.4
   Compiling serde v1.0.200
   Compiling cc v1.0.96
    Checking once_cell v1.19.0
   Compiling typenum v1.17.0
   Compiling lock_api v0.4.12
   Compiling generic-array v0.14.7
    Checking scopeguard v1.2.0
   Compiling libm v0.2.8
   Compiling num-traits v0.2.19
   Compiling quote v1.0.36
    Checking getrandom v0.2.14
   Compiling syn v2.0.60
    Checking memchr v2.7.2
    Checking smallvec v1.13.2
   Compiling parking_lot_core v0.9.10
    Checking spin v0.9.8
   Compiling ahash v0.8.11
    Checking subtle v2.5.0
    Checking byteorder v1.5.0
    Checking futures-core v0.3.30
    Checking zerocopy v0.7.33
    Checking pin-project-lite v0.2.14
   Compiling thiserror v1.0.59
    Checking allocator-api2 v0.2.18
   Compiling semver v1.0.22
    Checking itoa v1.0.11
    Checking rand_core v0.6.4
   Compiling strsim v0.10.0
   Compiling ident_case v1.0.1
   Compiling fnv v1.0.7
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking hashbrown v0.14.5
    Checking tinyvec_macros v0.1.1
    Checking either v1.11.0
    Checking digest v0.10.7
    Checking tinyvec v1.6.0
   Compiling dirs-sys-next v0.1.2
   Compiling aho-corasick v1.1.3
   Compiling slab v0.4.9
   Compiling crunchy v0.2.2
   Compiling syn v1.0.109
    Checking log v0.4.21
   Compiling regex-syntax v0.8.3
    Checking unicode-normalization v0.1.23
   Compiling rustc_version v0.4.0
   Compiling dirs-next v2.0.0
   Compiling ring v0.17.8
   Compiling siphasher v0.3.11
    Checking equivalent v1.0.1
   Compiling tiny-keccak v2.0.2
   Compiling phf_shared v0.10.0
   Compiling heapless v0.7.17
   Compiling indexmap v2.2.6
   Compiling term v0.7.0
   Compiling parking_lot v0.12.2
   Compiling regex-automata v0.4.6
   Compiling darling_core v0.20.8
   Compiling same-file v1.0.6
   Compiling serde_json v1.0.116
   Compiling precomputed-hash v0.1.1
    Checking futures-sink v0.3.30
   Compiling new_debug_unreachable v1.0.6
   Compiling bit-vec v0.6.3
   Compiling serde_derive v1.0.200
   Compiling thiserror-impl v1.0.59
    Checking cpufeatures v0.2.12
    Checking futures-io v0.3.30
   Compiling fixedbitset v0.4.2
   Compiling itertools v0.11.0
   Compiling petgraph v0.6.4
   Compiling darling_macro v0.20.8
   Compiling darling v0.20.8
   Compiling lalrpop-util v0.20.2
   Compiling regex v1.10.4
   Compiling bit-set v0.5.3
   Compiling string_cache v0.8.7
   Compiling ena v0.14.2
   Compiling walkdir v2.5.0
   Compiling ascii-canvas v3.0.0
    Checking hash32 v0.2.1
   Compiling psm v0.1.21
    Checking ppv-lite86 v0.2.17
    Checking bytes v1.6.0
   Compiling pico-args v0.5.0
    Checking ryu v1.0.17
    Checking stable_deref_trait v1.2.0
   Compiling unicode-xid v0.2.4
    Checking untrusted v0.9.0
   Compiling lalrpop v0.20.2
    Checking rand_chacha v0.3.1
   Compiling futures-macro v0.3.30
    Checking futures-channel v0.3.30
    Checking inout v0.1.3
   Compiling stacker v0.1.15
   Compiling proc-macro-error-attr v1.0.4
    Checking unicode-bidi v0.3.15
    Checking percent-encoding v2.3.1
    Checking futures-task v0.3.30
    Checking lazy_static v1.4.0
    Checking pin-utils v0.1.0
   Compiling crossbeam-utils v0.8.19
    Checking futures-util v0.3.30
    Checking idna v0.5.0
    Checking form_urlencoded v1.2.1
    Checking cipher v0.4.4
    Checking rstar v0.11.0
    Checking rand v0.8.5
   Compiling serde_with_macros v3.8.1
   Compiling tokio-macros v2.2.0
   Compiling miette-derive v5.10.0
    Checking approx v0.5.1
    Checking mio v0.8.11
    Checking socket2 v0.5.7
    Checking num_cpus v1.16.0
    Checking signal-hook-registry v1.4.2
    Checking tracing-core v0.1.32
   Compiling num-bigint v0.4.4
   Compiling proc-macro-error v1.0.4
   Compiling time-core v0.1.2
   Compiling rustls v0.21.12
    Checking arbitrary v1.3.2
    Checking robust v1.1.0
    Checking unicode-width v0.1.12
   Compiling num-conv v0.1.0
   Compiling doc-comment v0.3.3
    Checking base64ct v1.6.0
    Checking powerfmt v0.2.0
    Checking deranged v0.3.11
    Checking password-hash v0.5.0
   Compiling time-macros v0.2.18
    Checking miette v5.10.0
    Checking geo-types v0.7.13
    Checking serde_with v3.8.1
    Checking rustc_lexer v0.1.0
    Checking tokio v1.37.0
    Checking smol_str v0.2.1
    Checking earcutr v0.4.3
    Checking url v2.5.0
    Checking rustls-webpki v0.101.7
    Checking sct v0.7.1
    Checking itertools v0.10.5
    Checking num-integer v0.1.46
   Compiling ring v0.16.20
    Checking geographiclib-rs v0.2.4
   Compiling ref-cast v1.0.22
   Compiling httparse v1.8.0
   Compiling rust_decimal v1.35.0
    Checking unicode-script v0.5.6
    Checking ipnet v2.9.0
   Compiling heck v0.4.1
    Checking float_next_after v1.0.0
   Compiling radium v0.7.0
    Checking iana-time-zone v0.1.60
   Compiling snafu-derive v0.7.5
    Checking chrono v0.4.38
    Checking unicode-security v0.1.1
    Checking time v0.3.36
    Checking concurrent-queue v2.5.0
    Checking futures-executor v0.3.30
    Checking sha2 v0.10.8
    Checking sha1 v0.10.6
   Compiling ref-cast-impl v1.0.22
   Compiling tracing-attributes v0.1.27
    Checking hmac v0.12.1
    Checking thread_local v1.1.8
    Checking arrayvec v0.7.4
    Checking tap v1.0.1
    Checking bytemuck v1.15.0
   Compiling snap v1.1.1
    Checking spin v0.5.2
    Checking base64 v0.21.7
   Compiling fst v0.4.7
    Checking untrusted v0.7.1
    Checking atomic v0.5.3
    Checking pem v2.0.1
    Checking uuid v1.8.0
    Checking roaring v0.10.4
    Checking http v0.2.12
    Checking wyz v0.5.1
    Checking tracing v0.1.40
    Checking pbkdf2 v0.12.2
   Compiling revision-derive v0.7.0
    Checking futures v0.3.30
    Checking snafu v0.7.5
    Checking simple_asn1 v0.6.2
    Checking geo v0.26.0
    Checking spade v2.6.0
    Checking bincode v1.3.3
    Checking salsa20 v0.10.2
    Checking blowfish v0.9.1
   Compiling cedar-policy-core v2.4.2
   Compiling pin-project-internal v1.1.5
   Compiling async-trait v0.1.80
    Checking blake2 v0.10.6
    Checking futures-lite v2.3.0
    Checking nibble_vec v0.1.0
    Checking fastrand v1.9.0
    Checking parking v2.2.0
    Checking minimal-lexical v0.2.1
    Checking any_ascii v0.3.2
    Checking async-task v4.7.1
    Checking event-listener v2.5.3
    Checking funty v2.0.0
    Checking psl-types v2.0.11
    Checking humantime v2.1.0
    Checking utf-8 v0.7.6
    Checking urlencoding v2.1.3
    Checking fastrand v2.1.0
    Checking zeroize v1.7.0
    Checking endian-type v0.1.2
    Checking data-encoding v2.6.0
    Checking waker-fn v1.1.1
    Checking base64 v0.22.1
    Checking futures-lite v1.13.0
    Checking revision v0.7.0
    Checking bitvec v1.0.1
    Checking bcrypt v0.15.1
    Checking tungstenite v0.20.1
    Checking async-executor v1.11.0
    Checking radix_trie v0.2.1
    Checking dmp v0.2.0
    Checking object_store v0.8.0
    Checking addr v0.15.6
    Checking async-channel v1.9.0
    Checking lexicmp v0.1.0
    Checking nom v7.1.3
    Checking pin-project v1.1.5
    Checking argon2 v0.5.3
    Checking geo v0.27.0
    Checking surrealdb-jsonwebtoken v8.3.0-surreal.1
    Checking scrypt v0.11.0
    Checking tokio-rustls v0.24.1
    Checking fuzzy-matcher v0.3.7
    Checking storekey v0.5.0
    Checking rust-stemmers v1.2.0
    Checking ulid v1.1.2
    Checking nanoid v0.4.0
    Checking quick_cache v0.4.2
   Compiling surrealdb-derive v0.12.0
   Compiling async-recursion v1.1.1
    Checking md-5 v0.10.6
    Checking nanorand v0.7.0
    Checking overload v0.1.1
    Checking webpki-roots v0.25.4
    Checking deunicode v1.4.4
    Checking hex v0.4.3
    Checking trice v0.4.0
    Checking flume v0.11.0
    Checking tokio-tungstenite v0.20.1
    Checking nu-ansi-term v0.46.0
    Checking futures-concurrency v7.6.0
    Checking tracing-log v0.2.0
    Checking sharded-slab v0.1.7
    Checking path-clean v1.0.1
    Checking tracing-subscriber v0.3.18
    Checking cedar-policy-validator v2.4.2
    Checking cedar-policy v2.4.2
    Checking surrealdb-core v1.4.2
error[E0275]: overflow evaluating the requirement `Pin<Box<{async block@/home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/surrealdb-core-1.4.2/src/dbs/iterator.rs:611:2: 611:20}>>: CoerceUnsized<Pin<Box<dyn futures::Future<Output = Result<(), ...>> + std::marker::Send>>>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/surrealdb-core-1.4.2/src/dbs/iterator.rs:611:2
    |
611 |     #[async_recursion]
    |     ^^^^^^^^^^^^^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`surrealdb_core`)
    = note: required for the cast from `Pin<Box<...>>` to `Pin<Box<dyn futures::Future<Output = Result<(), err::Error>> + std::marker::Send>>`
    = note: the full name for the type has been written to '/tmp/nix-shell.uUVugk/fokklz_surreal-bug-report-parse-error_byrxvhzy/target/debug/deps/surrealdb_core-ede77ee76714f455.long-type-12882560083298155170.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the attribute macro `async_recursion` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0275`.
error: could not compile `surrealdb-core` (lib) due to 1 previous error
